# sqtp_cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  head.cmake  readme.md  release.sh
app_sqbus/: CMakeLists.txt  build.sh  readme.md
app_sqbus/conf/: config.cfg
app_sqbus/src/api/: CMakeLists.txt  sq_bus_api.cpp  sq_bus_api.h
app_sqbus/src/base/: bus_message.h
app_sqbus/src/client/: cli_r.cpp  cli_s.cpp
app_sqbus/src/server/: app.cpp  app.h  bus_client.cpp  bus_client.h  bus_server.cpp  bus_server.h  main.cpp
app_trade_service/: CMakeLists.txt
app_trade_service/conf/: config.cfg  config.xml
app_trade_service/db/: tb_contract.txt
app_trade_service/src/: app.cpp  app.h  main.cpp
app_trade_service/src/api/: sq_ts_api.cpp  sq_ts_api.h
app_trade_service/src/base/: server.cpp  server.h
app_trade_service/src/cli/: main.cpp
app_trade_service/src/data_server/: data_server.cpp  data_server.h
app_trade_service/src/gate_server/: gate_server.cpp  gate_server.h
app_trade_service/src/md_server/: md_server.cpp  md_server.h
app_trade_service/src/query_server/: query_server.cpp  query_server.h
cover/: gen_cov.sh
libframe/: CMakeLists.txt
libframe/include/: sq_app_base.h  sq_frame.h  sq_frame_def.h  sq_mdb.h  sq_strategy_app.h
libframe/include/service/: sq_service_acceptor.h  sq_service_base.h
libframe/src/: sq_app_base.cpp  sq_frame.cpp  sq_frame_md.cpp  sq_frame_td.cpp  sq_mdb.cpp  sq_strategy_app.cpp
libframe/src/service/: sq_service_acceptor.cpp  sq_service_base.cpp
liboffer/: CMakeLists.txt
liboffer/include/: plug_base.h
liboffer/plug_bz_md_post/: CMakeLists.txt  bz_md_post.cpp  bz_md_post.h  plug_bz_md_post.cpp
liboffer/plug_bz_md_store/: CMakeLists.txt  plug_bz_md_store.cpp  store_quot.cpp  store_quot.h
liboffer/plug_bz_risk/: CMakeLists.txt  plug_bz_risk.cpp  plug_bz_risk_imp.cpp  plug_bz_risk_imp.h
liboffer/plug_bz_stock_fe/: CMakeLists.txt  bz_stock_fe.cpp  bz_stock_fe.h  plug_bz_stock_fe.cpp  stock_big_order.cpp  stock_big_order.h  stock_fe_base.h  stock_moment.cpp  stock_moment.h  stock_quote_price.cpp  stock_quote_price.h
liboffer/plug_ctp_future/: readme.txt
liboffer/plug_md_replay/: CMakeLists.txt  plug_replay.cpp  replay_quot.cpp  replay_quot.h
liboffer/plug_md_udp_recver/: CMakeLists.txt  md_udp_recver.cpp  md_udp_recver.h  plug_md_udp_recver.cpp
liboffer/plug_sim_dce/: CMakeLists.txt  plug_sim_dce.cpp  sim_dce_imp.cpp  sim_dce_imp.h
liboffer/plug_td_sim_by_quot/: CMakeLists.txt  plug_td_sim_by_quot.cpp  sim_base.cpp  sim_base.h  td_sim_by_quot.cpp  td_sim_by_quot.h
liboffer/plug_td_sim_driver/: CMakeLists.txt  plug_td_sim_driver.cpp  sim_base.h  td_sim_driver.cpp  td_sim_driver.h
liboffer/src/: plug_base.cpp
libsqbz/: CMakeLists.txt
libsqbz/include/: sq_biz_table_base.h  sq_bz_utils.h  sq_const_define.h  sq_contract_posi_table.h  sq_contract_table.h  sq_convert.h  sq_fe_struct.h  sq_match_table.h  sq_memory_db.h  sq_order_table.h  sq_posi_table.h  sq_price_level_table.h  sq_quot_file.h  sq_quot_table.h  sq_struct_def.h  sq_struct_des.h  sq_tid_define.h  sq_ts_change.h  sq_type_define.h
libsqbz/include/match/: sq_match_core.h
libsqbz/src/: sq_contract_posi_table.cpp  sq_contract_table.cpp  sq_convert.cpp  sq_match_table.cpp  sq_memory_db.cpp  sq_order_table.cpp  sq_posi_table.cpp  sq_price_level_table.cpp  sq_quot_file.cpp  sq_quot_table.cpp  sq_struct_def.cpp  sq_struct_des.cpp  sq_ts_change.cpp
libsqbz/src/match/: sq_match_core.cpp
libsqbz/test/: CMakeLists.txt  main.cpp  test_quot_file.cpp  test_table.cpp
libsqbz/test/src/: main.cpp  test_match_core.cpp  test_quot_file.cpp  test_struct_des.cpp
libsqtp/: CMakeLists.txt
libsqtp/example/: CMakeLists.txt
libsqtp/example/src/: echo_tcp_client.cpp  echo_tcp_server.cpp  echo_udp_recver.cpp  echo_udp_sender.cpp  echo_ws_client.cpp  echo_ws_server.cpp
libsqtp/include/: reflect.h  sq_app.h  sq_define.h  sq_macro.h  sq_types.h  sq_unit_test.h  unit_test.h
libsqtp/include/base/: safe_data.h  scope_exit.h  sq_fsm.h  sq_getopt.h  sq_singleton.h  sq_util.h
libsqtp/include/cmd_line/: sq_cmd_line_handler.h
libsqtp/include/container/: byte_array.h  byte_buffer.h  memory_file.h  ptr_array.h  ring_buffer.h  safe_map.h  shared_queue.h  sq_any.h  sq_fixed_queue.h
libsqtp/include/crypto/: sm4.h  sq_crypto.h
libsqtp/include/db/: SQLiteWrapper.h  kv_db.h  mem_db_lite.h  mysql_db.h  sq_enable_db.h  sq_memdb.h  sq_mysql_client.h  sq_orm.h  sq_table_des.h
libsqtp/include/error/: sq_err.h  sq_exception.h
libsqtp/include/fmt/: format.h
libsqtp/include/http/: http_client.h  http_request.h  http_response.h  sq_http.h  sq_url.h  websocket.h  ws_channel.h  ws_client.h  ws_handler.h  ws_server.h
libsqtp/include/log/: log_common.h  log_targer.h  perf_log.h  sq_logger.h
libsqtp/include/math/: math_util.h  number_array.h
libsqtp/include/mem/: sq_mem.h
libsqtp/include/mq/: mq_cli.h  mq_cli_kafka.h
libsqtp/include/net/: event_handler.h  net_address.h  net_cache.hpp  net_init.hpp  net_socket.h  notify_handler.h  reactor.h  sq_ev_engine.h  tcp_channel.h  tcp_client.h  tcp_handler.h  tcp_server.h  timer_handler.h  timer_poll.h  udp_channel.h  udp_handler.h  udp_recver.h  udp_sender.h
libsqtp/include/os/: sq_hardware.h  sq_load_library.h  sq_path.h  sq_shm.h  sq_sys.h
libsqtp/include/pack/: pack_msg.h  sq_package.h  sq_serialize_obj.h  sq_vint.h  struct_reflect.h
libsqtp/include/plug/: sq_plug.h  sq_plug_obj.h
libsqtp/include/pool/: object_poll.h  sq_thread_pool.h
libsqtp/include/store/: sq_store.h  sq_store_reader.h
libsqtp/include/sync/: sq_atomic.h  sq_rwlock.h  sq_shm_ipc.h  sq_spin_lock.h  sq_sync.h
libsqtp/include/text/: csv_file.h  ini_file.h  json.hpp  json_conf.h  kv_parser.h  sq_config.h  sq_option_parser.h  sq_string.h  xml_config_parser.h
libsqtp/include/time/: date_time.h
libsqtp/include/xml/: rapidxml_print.hpp
libsqtp/src/: sq_app.cpp  sq_package.cpp  sq_unit_test.cpp  unit_test.cpp
libsqtp/src/base/: sq_getopt.cpp  sq_util.cpp
libsqtp/src/cmd_line/: sq_cmd_line_handler.cpp
libsqtp/test/: CMakeLists.txt
(+124 files in other folders)
