#plugs of market
add_subdirectory(plug_md_replay)

#plugs of trade
add_subdirectory(plug_td_sim_driver)
#add_subdirectory(plug_md_nh_ultra)
add_subdirectory(plug_td_sim_by_quot)
#add_subdirectory(test)

#plubs of biz
add_subdirectory(plug_bz_md_store)
add_subdirectory(plug_bz_stock_fe)

add_subdirectory(plug_sim_dce)